[GTK] Web Process deadlock when closing the remote inspector frontend https://bugs.webkit.org/show_bug.cgi?id=172973

Reviewed by Žan Doberšek.

We are taking the remote inspector mutex twice. First close message is received, and receivedCloseMessage()
takes the mutex. Then RemoteConnectionToTarget::close() is called that, when connected, calls
PageDebuggable::disconnect() that ends up calling RemoteInspector::updateTarget() that also takes the remote
inspector mutex. We should release the mutex before calling RemoteConnectionToTarget::close().

* inspector/remote/glib/RemoteInspectorGlib.cpp:
(Inspector::RemoteInspector::receivedCloseMessage):

Canonical link: https://commits.webkit.org/189855@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217830 268f45cc-cd09-0410-ab3c-d52691b4dbfc