Source/JavaScriptCore/inspector/remote/glib/RemoteInspectorGlib.cpp
@@ -307,16 +307,19 @@ void RemoteInspector::receivedDataMessage(unsigned targetIdentifier, const char*
 
 void RemoteInspector::receivedCloseMessage(unsigned targetIdentifier)
 {
-    std::lock_guard<Lock> lock(m_mutex);
-    RemoteControllableTarget* target = m_targetMap.get(targetIdentifier);
-    if (!target)
-        return;
+    RefPtr<RemoteConnectionToTarget> connectionToTarget;
+    {
+        std::lock_guard<Lock> lock(m_mutex);
+        RemoteControllableTarget* target = m_targetMap.get(targetIdentifier);
+        if (!target)
+            return;
 
-    auto connectionToTarget = m_targetConnectionMap.take(targetIdentifier);
+        connectionToTarget = m_targetConnectionMap.take(targetIdentifier);
+        updateHasActiveDebugSession();
+    }
+
     if (connectionToTarget)
         connectionToTarget->close();
-
-    updateHasActiveDebugSession();
 }
 
 void RemoteInspector::setup(unsigned targetIdentifier)
